-- Create the database if it doesn't exist
CREATE DATABASE devices;

-- Connect to the database
\c devices;

create table if not exists device (
    id            integer generated by default as identity primary key,
    house_id      integer,
    module_id     integer,
    state         smallint constraint device_state_check check ((state >= 0) AND (state <= 1)),
    type_id       integer,
    location      varchar(255),
    serial_number varchar(255),
    unit          varchar(255)
);

create table if not exists device_type (
    id integer generated by default as identity primary key
);

create table if not exists module (
    id integer generated by default as identity primary key
);

create table if not exists module_type (
    id integer generated by default as identity primary key
);


create sequence device_id_seq;
alter sequence device_id_seq owned by device.id;

create sequence device_type_id_seq;
alter sequence device_type_id_seq owned by device_type.id;

create sequence module_id_seq;
alter sequence module_id_seq owned by module.id;

create sequence module_type_id_seq;
alter sequence module_type_id_seq owned by module_type.id;



