package ru.smarthome.devices.services;

import org.springframework.stereotype.Service;

@Service
public class ModuleTypeService {
}
